--- a/css/css.zip.css/css/stylesheet.css
+++ b/css/css.zip.css/css/stylesheet.css
@@ -50,10 +50,12 @@ h5 {
   background-color: ivory;
   text-align: center;
   font-size: 23px;
+  border-radius: 45px;
   border-style: solid;
   border-width: 4px;
-  margin-right: 200px;
-  margin-left: 200px;
+  margin-top: 20px;
+  margin-right: 120px;
+  margin-left: 120px;
 }
 
 .container {
@@ -154,8 +156,11 @@ width: 10%;
   border-style: solid;
   border-width: 10px;
   border-color: #e2d95c;
-  margin-right: 130px;
-  margin-left: 130px;
+  margin-right: 50px;
+  margin-left: 50px;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #Introduction {
@@ -289,21 +294,49 @@ width: 10%;
 
 /* Media Queries */
 
-@media (min-width: 380px){
+@media (max-width: 380px){
   .Realskillsdiv {
     grid-template-columns: repeat(1, 1fr);
   }
-}
 
-@media (min-width: 430px) {
-  .Realskillsdiv { 
-    grid-template-columns: repeat(2,1fr); 
+  #Introdiv {
+    background-color: #fff;
+    border-style: solid;
+    border-width: 7px;
+    border-color: #e2d95c;
+    margin-right: 50px;
+    margin-left: 50px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .Sections {
+    margin-right: 20px;
+    margin-left: 20px;
   }
 }
 
-@media (min-width: 900px) {
+@media (max-width: 430px) {
   .Realskillsdiv { 
     grid-template-columns: repeat(2,1fr); 
+  }
+
+  .Sections {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 700px) {
+  .Realskillsdiv { 
+    grid-template-columns: repeat(2,1fr); 
+  }
+
+
+  .Sections {
+    margin-right: 20px;
+    margin-left: 20px;
   }
 }
 
