--- a/css/css.zip.css/css/stylesheet.css
+++ b/css/css.zip.css/css/stylesheet.css
@@ -46,7 +46,7 @@ h5 {
 
 /* CLASS SECTION */
 
-.Sections {
+.sections {
   background-color: ivory;
   text-align: center;
   font-size: 23px;
@@ -66,30 +66,30 @@ h5 {
   grid-template-areas: "skill1 skill2 skill3";
 }
 
-.Realskillsdiv{
+.realSkillsDiv{
   margin: auto;
   display: grid;
-  grid-gap: 2rem;
+  grid-gap: 10rem;
 }
 
-.CCOskills {
+.ccoSkills {
   color: #b13759;
   font-size: 20px;
   font-weight: 700;
   font-family: cursive;
 }
 
-.Experience {
+.experience {
   color: #1863a1;
   border-color: rgb(235, 153, 21);
 }
 
-.Icons:hover{
+.icons:hover{
   transform: translateY(-1rem)
   scale(1.5)
 }
 
-.Icons {
+.icons {
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -115,7 +115,7 @@ width: 10%;
  
 /* ID SECTION */
 
-#Name {
+#name {
   color: black;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
@@ -125,7 +125,7 @@ width: 10%;
   margin-bottom: -1px;
 }
 
-#Resume {
+#resume {
   color: #f88d12;
   font-family: cursive;
   font-weight: lighter;
@@ -134,7 +134,7 @@ width: 10%;
   background-color: white;
 }
 
-#Image {
+#image {
   border-style: solid;
   border-width: 5px;
   border-radius: 100%;
@@ -146,12 +146,12 @@ width: 10%;
   max-width: 100%;
 }
 
-#Imagediv {
+#imageDiv {
   margin-top: 1px;
   margin-bottom: -10px;
 }
 
-#Introdiv {
+#introDiv {
   background-color: #fff;
   border-style: solid;
   border-width: 10px;
@@ -163,11 +163,11 @@ width: 10%;
   padding-right: 20px;
 }
 
-#Introduction {
+#introduction {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
-#Aside {
+#aside {
   color: rgb(11, 131, 131);
   background-color: #ffbf69;
   width: 100px;
@@ -178,13 +178,13 @@ width: 10%;
   padding-right: 5px;
 }
 
-#Statement {
+#statement {
   text-align: center;
   font-size: 30px;
   font-family: serif;
 }
 
-#Realskills {
+#realSkills {
   background-color: #52b69a ;
   padding-bottom: 30px;
   padding-top: 1px;
@@ -193,19 +193,20 @@ width: 10%;
   border-radius: 85px;
 }
 
-#Realskillsdiv {
+#realSkillsDiv {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-#Realskills {
+
+#realSkills {
   margin: 30px;
   margin-top: 40px;
   margin-bottom: 40px;
 }
 
-#Creativeskills {
+#creativeSkills {
  border: 1px solid;
  padding: 10px;
  width: 20%;
@@ -214,7 +215,7 @@ width: 10%;
  grid-area: skill1;
 }
 
-#Computerskills {
+#computerSkills {
  border: 1px solid;
  padding: 10px;
  width: 20%;
@@ -222,7 +223,7 @@ width: 10%;
  grid-area: skill2;
 }
 
-#Otherskills {
+#otherSkills {
   border: 1px solid;
   padding: 10px;
   width: 20%;
@@ -232,7 +233,7 @@ width: 10%;
 }
 
 
-#Realeducation {
+#realEducation {
   background-color: #c9d68c;
   padding-bottom: 30px;
   padding-top: 1px;
@@ -244,7 +245,7 @@ width: 10%;
   margin-bottom: 40px;
 }
 
-#Realexperience {
+#realExperience {
   background-color: #e8d1c5;
   padding-bottom: 30px;
   padding-top: 1px;
@@ -256,35 +257,15 @@ width: 10%;
   margin-bottom: 40px;
 }
 
-#Socialmedia {
-  font-size: 20px;
-  font-family: monospace;
-  font-weight: bold;
-}
-
-#Online {
-  font-size: 13px;
-  font-family: cursive;
-  padding: 1px;
-}
-
-#Linksdiv {
+#linksDiv {
   display: inline-block;
 }
 
-#About{
-  height: 100px;
-}
 
-#Submit{
-  font-weight: 300;
+#socialMedia {
+  font-size: 20px;
+  font-family: monospace;
   font-weight: bold;
-  background-color: rgb(240, 112, 89);
-  border-radius: 10px;
-  border: 5px;
-  width: 150px;
-  margin-top: 2%;
-  margin-bottom: 5%;
 }
 
 #carouselExampleIndicators {
@@ -292,64 +273,7 @@ width: 10%;
   margin-bottom: 27%;
 }
 
-/* Media Queries */
 
-@media (max-width: 380px){
-  .Realskillsdiv {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  #Introdiv {
-    background-color: #fff;
-    border-style: solid;
-    border-width: 7px;
-    border-color: #e2d95c;
-    margin-right: 50px;
-    margin-left: 50px;
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .Sections {
-    margin-right: 20px;
-    margin-left: 20px;
-  }
-}
-
-@media (max-width: 430px) {
-  .Realskillsdiv { 
-    grid-template-columns: repeat(2,1fr); 
-  }
-
-  .Sections {
-    margin-right: 20px;
-    margin-left: 20px;
-  }
-}
-
-@media (max-width: 700px) {
-  .Realskillsdiv { 
-    grid-template-columns: repeat(2,1fr); 
-  }
-
-
-  .Sections {
-    margin-right: 20px;
-    margin-left: 20px;
-  }
-}
-
-@media only screen and (max-width:550px){
-  .container {
-   grid-template-columns: 1fr;
-   grid-template-rows: 1fr 1fr 1fr; 
-   grid-template-areas:
-    "skill1"
-    "skill2"
-    "skill3";
-  }
-}
 
 /*Form*/
 
@@ -373,4 +297,111 @@ label{
 
 input [type="checkbox"] [type="radio"]{
   margin-left: 32px;
+}
+
+
+#online {
+  font-size: 13px;
+  font-family: cursive;
+  padding: 1px;
+}
+
+#about{
+  height: 100px;
+}
+
+#submit{
+  font-weight: 300;
+  font-weight: bold;
+  background-color: rgb(240, 112, 89);
+  border-radius: 10px;
+  border: 5px;
+  width: 150px;
+  margin-top: 2%;
+  margin-bottom: 5%;
+}
+
+
+/* Media Queries */
+
+@media (max-width: 380px){
+  .realSkillsDiv {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  #introDiv {
+    margin-right: 30px;
+    margin-left: 30px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .sections {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+
+}
+
+@media (max-width: 430px) {
+  .realSkillsDiv { 
+    grid-template-columns: repeat(2,1fr); 
+  }
+
+  #introDiv {
+    margin-right: 30px;
+    margin-left: 30px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+  .sections {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 700px) {
+  .realSkillsDiv { 
+    grid-template-columns: repeat(2,1fr); 
+  }
+
+
+  .sections {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+}
+
+@media only screen and (max-width:550px){
+  .container {
+   grid-template-columns: 1fr;
+   grid-template-rows: 1fr 1fr 1fr; 
+   grid-template-areas:
+    "skill1"
+    "skill2"
+    "skill3";
+  }
+
+  #creativeSkills {
+    border: 1px solid;
+    padding: 10px;
+    width: 10%;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    grid-area: skill1;
+   }
+   
+   #computerSkills {
+    border: 1px solid;
+    padding: 5px;
+    width: 10%;
+    margin-bottom: 10px;
+    grid-area: skill2;
+   }
+   
+   #otherSkills {
+     border: n;
+   }
 }
