--- a/css/css.zip.css/css/stylesheet.css
+++ b/css/css.zip.css/css/stylesheet.css
@@ -1,4 +1,8 @@
 * {
+  box-sizing: border-box;
+}
+
+* {
   margin: o;
 }
 
@@ -106,10 +110,19 @@ h5 {
   color: #06375f;
 }
 
-.menuButton {
+#menuButton {
 cursor:pointer;
-height: 10%;
-width: 10%;
+height: 80%;
+width: 25%;
+text-align: center;
+}
+
+#menuButton:hover {background-color: #eb1616}
+
+#menuButton:active {
+  background-color: #f5d376;
+  box-shadow: 0 5px rgb(231, 200, 60);
+  transform: translateY(4px);
 }
 
  
@@ -136,9 +149,9 @@ width: 10%;
 
 #image {
   border-style: solid;
-  border-width: 5px;
+  border-width: 3px;
   border-radius: 100%;
-  border-color: rgb(255, 254, 254);
+  border-color: rgb(14, 12, 12);
   margin-top: 1px;
   margin-bottom: 1px;
   width: 250px;
